# game_sdl

./: CMakeLists.txt  imgui.ini
engine/: CMakeLists.txt
engine/src/camera/: camera.cpp  camera.h
engine/src/collision/: collision_manager.cpp  collision_manager.h
engine/src/renderer/: light_manager.h  renderer.cpp  renderer.h  shader.cpp  shader.h
engine/src/scene/: components.h  entity.h  scene.h
engine/src/timer/: timer.cpp  timer.h
engine/src/window/: window.cpp  window.h
game/: CMakeLists.txt
game/src/: app.cpp  app.h  main.cpp
game/src/editor/: editor.cpp  editor.h
game/src/game/: game.cpp  game.h  game_components.h
game/src/game/map/: map.cpp  map.h  map_consts.h
game/src/game/player/: player.cpp  player.h
game/src/gameplay/: game.cpp  game.h
game/src/gameplay/level/: level.cpp  level_consts.h
res/shaders/: inst.frag  inst.vert
src/: app.cpp  app.h  editor.cpp  editor.h  main.cpp
src/game/: game.cpp  game.h
src/game/level/: level.cpp  level.h  level_consts.h
src/renderer/: renderer.cpp  renderer.h
src/window/: window.cpp  window.h
